--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.univ.tln.mguiddir</groupId>
   <artifactId>dvdRental</artifactId>
   <version>1.0-SNAPSHOT</version>
-
+  <packaging>jar</packaging>
   <name>dvdRental</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -24,29 +23,30 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.5</version>
+    </dependency>
 
+  </dependencies>
   <build>
-      <defaultGoal>install</defaultGoal>
-    <!-- Make this jar executable -->
+
     <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-jar-plugin</artifactId>
-      <version>3.2.0</version>
-      <configuration>
-        <!-- DO NOT include log4j.properties file in your Jar -->
-        <excludes>
-          <exclude>**/log4j.properties</exclude>
-        </excludes>
-        <archive>
-          <manifest>
-            <!-- Jar file entry point -->
-            <mainClass>fr.univ.tln.mguiddir.App</mainClass>
-          </manifest>
-        </archive>
-      </configuration>
-    </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>fr.univ.tln.mguiddir.App</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
